--- a/src/Category.css
+++ b/src/Category.css
@@ -1,9 +1,26 @@
-#Pic1, #Pic2, #Pic3 {
-    height: 200;
-    float: left;
+img {
+    height: 200px;
 }
 
-.categoryChoice {
+div.categoryChoice {
+    position: absolute;
+    top: 40%;
+    left: 6%;
+    max-width: 100%;
+}
+
+p {
+    margin: 10px;
     float: left;
-    margin: 100, 20, 100, 10;
+    text-align: center;
+}
+
+label {
+    position: fixed;
+    float: left;
+    margin-top: 73px;
+    margin-left: 80px;
+    font-size: 34px;
+    font-weight: 800;
+    color: orangered;
 }
